detect gesture  added tools for start/end and feet

--- a/src/frontend/www/templates/modal-newtopo.html
+++ b/src/frontend/www/templates/modal-newtopo.html
@@ -2,7 +2,7 @@
       <ion-header-bar>
         <button class="button button-clear icon ion-chevron-left" ng-click="closeNewModal()"></button> 
         <h1 class = "title">{{topo.name}}</h1>
-        <!-- <button class="button icon ion-hammer" ng-click="openPopover($event)"></button>--> 
+        <button class="button icon ion-edit" ng-click="showTools()"></button> 
 
       </ion-header-bar>
 	
