--- a/src/frontend/www/templates/modal-newtopo.html
+++ b/src/frontend/www/templates/modal-newtopo.html
@@ -1,11 +1,17 @@
 <ion-modal-view>
-      <ion-header-bar>
-        <button class="button button-clear icon ion-chevron-left" ng-click="closeNewModal()"></button> 
-        <h1 class = "title">{{topo.name}}</h1>
-        <button class="button icon ion-edit" ng-click="showTools()"></button> 
-
-      </ion-header-bar>
-	
+    <ion-header-bar>
+      <div class="buttons">
+          <button class="button icon ion-chevron-left" ng-click="closeNewModal()"></button> 
+        </button>
+      </div>
+      <h1 class="title">Sketch</h1>
+      <div class="buttons">
+        <button class="button icon ion-edit" ng-click="showTools()"></button>
+<!--        <button class="button icon ion-chevron-right" ng-click="closeNewModal()"></button>   -->
+        
+      </div>
+    </ion-header-bar>
+      
       <ion-content scroll="false" id="iontopocontentmodal" style="background-color:black;">
 <!--
 <div id="BoulderContainer" style="position:relative; width:100%;">
