--- a/src/frontend/www/templates/modal-topo.html
+++ b/src/frontend/www/templates/modal-topo.html
@@ -13,12 +13,20 @@
           <svg id="modalTopoSvg" style="opacity:.99; position:absolute;"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  detect-gestures>
           </div>
 -->
+<!--
 <div id="bouldercontainer" style="position:relative;width:100%;border: 1px solid red;" ng-click="closeModal()">
 <img  id="modalTopoImage" style="display: block;opacity:.99;position:relative;top:0;left:0;width:100%;height:100%;" ng-src="{{topo.picture}}">
-<!--<svg id="modalTopoSvg" imageid="newModalTopoImage" setsize="true" mode="edit" viewBox="0 0 320 568" display="block" style="opacity:.99;position:absolute;top:0;left:0;width:100%;height:100%;border: 1px solid blue;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" detect-gestures class="disable-user-behavior">-->
     <svg id="modalTopoSvg" imageid="modalTopoImage" setsize="false" mode="view" viewBox="0 0 320 568" display="block" style="opacity:.99;position:absolute;top:0;left:0;width:100%;height:100%;border: 1px solid blue;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" detect-gestures class="disable-user-behavior">
 </svg>
 </div>
+-->
+          
+   <div id="container2" style="position:relative;width:100%;height:auto;border: 1px solid red;" ng-click="closeModal()">
+    <img   id="modalTopoImage" ng-src="{{topo.picture}}" style="display: block;opacity:.99;position:relative;top:0;left:0;width:100%;height:100%;">
+<svg id="modalTopoSvg" imageid="modalTopoImage" mode=""   style="opacity:.99;position:absolute;top:0;left:0;width:100%;height:100%;border: 1px solid blue;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" detect-gestures> <!-- width="320" height="568" viewBox="0 0 320 568">--> 
+</svg>
+</div>
+
       </ion-content> 
 
 </ion-modal-view>
