--- a/src/frontend/www/templates/topo-detail.html
+++ b/src/frontend/www/templates/topo-detail.html
@@ -67,7 +67,7 @@
           <ion-item><b>Name:</b> {{topo.name}}</ion-item>
           <ion-item><b>Grade:</b> V{{topo.grade}}</ion-item>
           <ion-item><b>Distance:</b> {{topo.distance | distance}}</ion-item>
-          <ion-item><b>Owner:</b> {{topo.ownerId}}</ion-item>
+          <ion-item><b>Owner:</b> {{topo.ownerName}}</ion-item>
           <ion-item><b>Created At:</b> {{topo.createdAt}}</ion-item>
 <!--
           <ion-item><b>Updated At:</b> {{topo.updatedAt}}</ion-item>
