--- a/src/frontend/www/templates/tab-account.html
+++ b/src/frontend/www/templates/tab-account.html
@@ -2,18 +2,10 @@
   <ion-content>    
     <ion-list>
         <ion-item class="item item-avatar" href="#">
-      <img ng-src="{{photoURL}}">
-      <h2>{{displayName}}</h2>
-      <p>{{email}}</p>
+      <img ng-src="{{user.photoURL}}">
+      <h2>{{user.name}}</h2>
+      <p>{{user.email}}</p>
     </ion-item>
-<!--
-    <ion-item class="item-profile">
-        <div class="item-avatar">
-            <img ng-src="{{photoURL}}">
-        </div>
-        {{displayName}}
-    </ion-item>     
--->
     </ion-list>
     
 <!--    <button class="button button-full button-positive" ng-click="login()">Login with Facebook</button>  -->
