Front End Geolocation and Topos services update
- Geoposition Service:
—maintains position itself and updates it with timer
- Topos Service:
—Updates position by location in a radius of 20km.
— Pictures are downloaded in the background after loading GUI
— New Topo property « age »  
-Mapbox.js:
— library stored locally for quick access

--- a/src/frontend/www/templates/tab-topos.html
+++ b/src/frontend/www/templates/tab-topos.html
@@ -13,7 +13,7 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="topo in topos | filter:search |orderBy:orderBySetting:true" type="item-text-wrap" href="#/tab/topos/{{topo._id}}">
         <img ng-src="{{topo.picture}}">
         <h2>V{{topo.grade}}{{topo.name | BoulderNameWithComma}}</h2> 
-          <p>{{topo.distance | distance}}</p>
+          <p>{{topo.distance | distance}}, {{topo.age | age}}</p>
           <p>{{topo.ownerName}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
