--- a/src/frontend/www/templates/tab-topos.html
+++ b/src/frontend/www/templates/tab-topos.html
@@ -1,16 +1,63 @@
 <ion-view view-title="My Boulders">
     <ion-nav-buttons side="secondary">
-        <button class="button button-clear icon ion-toggle" ng-click="openToposModalSearchOptions()"></button>
         <a class="button button-clear icon ion-plus-round" href="#/tab/newTopo"></a>
     </ion-nav-buttons>
   
-    <ion-content>
-      <ion-refresher on-refresh="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>  
+    <ion-content padding="true" scroll="true">
+        <ion-refresher on-refresh="doRefresh($event)">
+            <ion-refresher-content></ion-refresher-content>
+        </ion-refresher>
         
+        <ion-item class="item-divider" id="searchOptions-list-item-divider1"> Search Options...</ion-item>
+        <ion-item id="searchOptions-markdown4" style="color:#000000;">
+            <p>Grades from
+                <strong>V{{settings.searchGradeMin}}</strong> to 
+                <strong>V{{settings.searchGradeMax}}</strong>
+            </p>
+        </ion-item>
+        <form id="searchOptions-form2" class="list">
+            <ion-item class="range range-positive" id="searchOptions-range1">Min
+                <input type="range" value="0" min="0" max="16" ng-model="settings.searchGradeMin">
+            </ion-item>
+            <ion-item class="range range-positive" id="searchOptions-range2">Max
+                <input type="range" value="16" min="0" max="16" ng-model="settings.searchGradeMax">
+            </ion-item>
+        </form>
+        <ion-item id="searchOptions-markdown8" style="color:#000000;">
+            <p>Closer than <strong>{{settings.searchMaxDistance | distance}}</strong></p>
+        </ion-item>
+        <form id="searchOptions-form8" class="list">
+            <ion-item class="range range-positive" id="searchOptions-range5">Distance
+                <input type="range" value="50" min="0" max="20000" ng-model="settings.searchMaxDistance">
+            </ion-item>
+        </form>
+        <form id="searchOptions-form9" class="list">
+            <label class="item item-select" id="searchOptions-select2">
+                <span class="input-label">Younger than</span>
+                <select ng-init="settings.searchAge = ageOptions[0]" 
+                        ng-model="settings.searchAge" 
+                        ng-options="option.name for option in ageOptions">
+                </select>
+            </label>
+        </form>
+        <form id="searchOptions-form9" class="list">
+            <label class="item item-select" id="searchOptions-select2">
+                <span class="input-label">Sort by</span>
+                <select ng-init="settings.searchOrderBy = orderByOptions[0]" 
+                        ng-model="settings.searchOrderBy" 
+                        ng-options="option.name for option in orderByOptions">
+                </select>
+            </label>
+        </form>
+<!--
+            <div class="spacer" style="width: 150px; height: 58px;"></div>
+            <button id="searchOptions-button1" class="button button-assertive  button-block" on-click="resetSettings">Reset Options</button>
+-->
+          <div class="spacer" style="width: 150px; height: 58px;"></div>    
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="topo in topos | filter:search |orderBy:orderBySetting:true" type="item-text-wrap" href="#/tab/topos/{{topo._id}}">
+      <ion-item class="item-divider" id="searchOptions-list-item-divider1"> {{filteredTopos.length}} of {{topos.length}} Boulders...</ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="topo in (filteredTopos = (topos | filter:search |orderBy:settings.searchOrderBy.order :true))" type="item-text-wrap" ng-click="goToState(filteredTopos, topo._id, $index)" > 
+<!--          href="#/tab/topos/{{topo._id}}">-->
         <img ng-src="{{topo.picture}}">
         <h2>V{{topo.grade}}{{topo.name | BoulderNameWithComma}}</h2> 
           <p>{{topo.distance | distance}}, {{topo.age | age}}</p>
